Bug 385293 - Unnecessary warning messages using "akonadictl fsck"
Summary: Unnecessary warning messages using "akonadictl fsck"
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-10-02 10:56 UTC by Freek de Kruijf
Modified: 2018-01-11 05:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Freek de Kruijf 2017-10-02 10:56:11 UTC
When using "akonadictl fsck", while status is "running", there are lots of messages like:
Checking Collection 389 search index...
org.kde.pim.akonadiplugin_indexer: unknown term  ""
They seem to be harmless, but seem to be superfluous.
Comment 1 Laurent Montel 2018-01-11 05:48:23 UTC
Git commit d3f6aa6d2d05bbb34d6300a8dc6ce1413b9d5203 by Laurent Montel.
Committed on 11/01/2018 at 05:47.
Pushed by mlaurent into branch 'master'.

Fix Bug 385293 - Unnecessary warning messages using "akonadictl fsck"

FIXE-IN: 5.8.0

M  +12   -4    akonadiplugin/searchplugin.cpp

https://commits.kde.org/akonadi-search/d3f6aa6d2d05bbb34d6300a8dc6ce1413b9d5203