Fix Bug 385293 - Unnecessary warning messages using "akonadictl fsck"

FIXE-IN: 5.8.0
BUG: 385293